--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 src/assets/demonstration-video.mp4 filter=lfs diff=lfs merge=lfs -text
+docs/assets/demonstration-video.mp4 filter=lfs diff=lfs merge=lfs -text
